hardcode main steps - because default value cant use parameters, see https://discuss.circleci.com/t/cci-2-1-conditional-step-on-list-steps-parameter-type/28432/5

--- a/src/commands/build_push.yml
+++ b/src/commands/build_push.yml
@@ -2,12 +2,15 @@ description: >
   Build the docker image with isopod.
 
 parameters:
-  path:
-    description: 'Path to directory containing "isopod.yml" file'
+  config:
+    type: string
+    default: isopod.yml
+  work_dir:
     type: string
     default: .
 
 steps:
   - run:
-      name: 'Build the Docker image using isopod'
-      command: isopod -f << parameters.path >>/isopod.yml build
+      name: 'isopod build'
+      working_directory: << parameters.work_dir >>
+      command: isopod -f << parameters.config >> build
