--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -30,9 +30,9 @@ usage:
       default: false
 
   cfg-docker-version: &cfg-docker-version
-    docker_version: "19.03.13"
+    docker_version: '19.03.13'
   cfg-isopod-version: &cfg-isopod-version
-    isopod_version: "0.29.1"
+    isopod_version: '0.29.1'
   cfg-cache-key-prefix: &cfg-cache-key-prefix
     cache_key_prefix: my-repo
 
@@ -50,7 +50,7 @@ usage:
         - ric-orb/no_op
 
     ###########################################################################
-    # workflow for maven module "app1"
+    # workflow for maven module 'app1'
     ###########################################################################
     app1:
       when:
@@ -60,26 +60,26 @@ usage:
 
       jobs:
         - ric-orb/maven_build_test:
-            name: "maven-build"
+            name: 'maven-build'
             context: dev
-            path: "app1"
+            path: 'app1'
             <<: *cfg-cache-key-prefix
             executor: maven_docker
 #            executor: maven_vm
 
         # jobs for branch #####################################################
         - approve_deploy_dev_branch:
-            name: "approve-deploy-dev-branch"
+            name: 'approve-deploy-dev-branch'
             type: approval
             filters:
               branches:
                 ignore:
-                  - "master"
+                  - 'master'
 
         - ric-orb/build_push_image:
-            name: "build-push-image-branch"
+            name: 'build-push-image-branch'
             context: dev
-            path: "app1"
+            path: 'app1'
             <<: [ *cfg-docker-version, *cfg-isopod-version ]
             docker_layer_caching: true
             requires:
@@ -87,59 +87,59 @@ usage:
               - approve-deploy-dev-branch
 
         - compliance/sre_compliance_checks:
-            name: "sre-compliance-checks-branch"
+            name: 'sre-compliance-checks-branch'
             context: dev
             requires:
               - build-push-image-branch
 
         - ric-orb/deploy_job:
-            name: "deploy-dev-branch"
+            name: 'deploy-dev-branch'
             context: dev
-            path: "app1"
+            path: 'app1'
             <<: *cfg-isopod-version
-            env: "dev"
+            env: 'dev'
             requires:
               - build-push-image-branch
 
         # jobs for master #####################################################
         - ric-orb/build_push_image:
-            name: "build-push-image-master"
+            name: 'build-push-image-master'
             context: dev
-            path: "app1"
+            path: 'app1'
             <<: [ *cfg-docker-version, *cfg-isopod-version ]
             docker_layer_caching: true
             filters:
               branches:
                 only:
-                  - "master"
+                  - 'master'
             requires:
               - maven-build
 
         - compliance/sre_compliance_checks:
-            name: "sre-compliance-checks-master"
+            name: 'sre-compliance-checks-master'
             context: dev
             requires:
               - build-push-image-master
 
         - ric-orb/deploy_job:
-            name: "deploy-dev-master"
+            name: 'deploy-dev-master'
             context: dev
-            path: "app1"
+            path: 'app1'
             <<: *cfg-isopod-version
-            env: "dev"
+            env: 'dev'
             requires:
               - build-push-image-master
         - ric-orb/deploy_job:
-            name: "deploy-prod-branch"
+            name: 'deploy-prod-branch'
             context: prod
-            path: "app1"
+            path: 'app1'
             <<: *cfg-isopod-version
-            env: "prod"
+            env: 'prod'
             requires:
               - deploy-dev-master
 
     ###########################################################################
-    # maven module: "app2"
+    # maven module: 'app2'
     ###########################################################################
     app2:
       when:
@@ -149,26 +149,26 @@ usage:
 
       jobs:
         - ric-orb/maven_build_test:
-            name: "maven-build"
+            name: 'maven-build'
             context: dev
-            path: "app2"
+            path: 'app2'
             <<: *cfg-cache-key-prefix
 #            executor: maven_docker
             executor: maven_vm
 
         # jobs for branch #####################################################
         - approve_deploy_dev_branch:
-            name: "approve-deploy-dev-branch"
+            name: 'approve-deploy-dev-branch'
             type: approval
             filters:
               branches:
                 ignore:
-                  - "master"
+                  - 'master'
 
         - ric-orb/build_push_image:
-            name: "build-push-image-branch"
+            name: 'build-push-image-branch'
             context: dev
-            path: "app2"
+            path: 'app2'
             <<: [ *cfg-docker-version, *cfg-isopod-version ]
             docker_layer_caching: true
             requires:
@@ -176,53 +176,53 @@ usage:
               - approve-deploy-dev-branch
 
         - compliance/sre_compliance_checks:
-            name: "sre-compliance-checks-branch"
+            name: 'sre-compliance-checks-branch'
             context: dev
             requires:
               - build-push-image-branch
 
         - ric-orb/deploy_job:
-            name: "deploy-dev-branch"
+            name: 'deploy-dev-branch'
             context: dev
-            path: "app2"
+            path: 'app2'
             <<: *cfg-isopod-version
-            env: "dev"
+            env: 'dev'
             requires:
               - build-push-image-branch
 
         # jobs for master #####################################################
         - ric-orb/build_push_image:
-            name: "build-push-image-master"
+            name: 'build-push-image-master'
             context: dev
-            path: "app2"
+            path: 'app2'
             <<: [ *cfg-docker-version, *cfg-isopod-version ]
             docker_layer_caching: true
             filters:
               branches:
                 only:
-                  - "master"
+                  - 'master'
             requires:
               - maven-build
 
         - compliance/sre_compliance_checks:
-            name: "sre-compliance-checks-master"
+            name: 'sre-compliance-checks-master'
             context: dev
             requires:
               - build-push-image-master
 
         - ric-orb/deploy_job:
-            name: "deploy-dev-master"
+            name: 'deploy-dev-master'
             context: dev
-            path: "app2"
+            path: 'app2'
             <<: *cfg-isopod-version
-            env: "dev"
+            env: 'dev'
             requires:
               - build-push-image-master
         - ric-orb/deploy_job:
-            name: "deploy-prod-branch"
+            name: 'deploy-prod-branch'
             context: prod
-            path: "app2"
+            path: 'app2'
             <<: *cfg-isopod-version
-            env: "prod"
+            env: 'prod'
             requires:
               - deploy-dev-master
