--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -29,8 +29,6 @@ usage:
       type: boolean
       default: false
 
-  cfg-docker-version: &cfg-docker-version
-    docker_version: '19.03.13'
   cfg-isopod-version: &cfg-isopod-version
     isopod_version: '0.29.1'
   cfg-cache-key-prefix: &cfg-cache-key-prefix
@@ -60,16 +58,14 @@ usage:
 
       jobs:
         - ric-orb/maven_build_test:
-            name: 'maven-build'
+            name: 'maven-build-test'
             context: dev
             path: 'app1'
             <<: *cfg-cache-key-prefix
             executor: maven_docker
 #            executor: maven_vm
 
-        # jobs for branch #####################################################
         - approve_deploy_dev_branch:
-            name: 'approve-deploy-dev-branch'
             type: approval
             filters:
               branches:
@@ -77,66 +73,42 @@ usage:
                   - 'master'
 
         - ric-orb/build_push_image:
-            name: 'build-push-image-branch'
+            name: 'build-push-image'
             context: dev
             path: 'app1'
-            <<: [ *cfg-docker-version, *cfg-isopod-version ]
+            <<: *cfg-isopod-version
             docker_layer_caching: true
             requires:
-              - maven-build
-              - approve-deploy-dev-branch
+              - maven-build-test
+              # note semantic of 'requires': on master this is ignored
+              - approve_deploy_dev_branch
 
         - compliance/sre_compliance_checks:
-            name: 'sre-compliance-checks-branch'
             context: dev
             requires:
-              - build-push-image-branch
+              - build-push-image
 
         - ric-orb/deploy_job:
-            name: 'deploy-dev-branch'
+            name: 'deploy-dev'
             context: dev
             path: 'app1'
             <<: *cfg-isopod-version
             env: 'dev'
             requires:
-              - build-push-image-branch
+              - build-push-image
 
-        # jobs for master #####################################################
-        - ric-orb/build_push_image:
-            name: 'build-push-image-master'
-            context: dev
+        - ric-orb/deploy_job:
+            name: 'deploy-prod'
+            context: prod
             path: 'app1'
-            <<: [ *cfg-docker-version, *cfg-isopod-version ]
-            docker_layer_caching: true
+            <<: *cfg-isopod-version
+            env: 'prod'
             filters:
               branches:
                 only:
                   - 'master'
             requires:
-              - maven-build
-
-        - compliance/sre_compliance_checks:
-            name: 'sre-compliance-checks-master'
-            context: dev
-            requires:
-              - build-push-image-master
-
-        - ric-orb/deploy_job:
-            name: 'deploy-dev-master'
-            context: dev
-            path: 'app1'
-            <<: *cfg-isopod-version
-            env: 'dev'
-            requires:
-              - build-push-image-master
-        - ric-orb/deploy_job:
-            name: 'deploy-prod-branch'
-            context: prod
-            path: 'app1'
-            <<: *cfg-isopod-version
-            env: 'prod'
-            requires:
-              - deploy-dev-master
+              - deploy-dev
 
     ###########################################################################
     # maven module: 'app2'
@@ -149,16 +121,14 @@ usage:
 
       jobs:
         - ric-orb/maven_build_test:
-            name: 'maven-build'
+            name: 'maven-build-test'
             context: dev
             path: 'app2'
             <<: *cfg-cache-key-prefix
 #            executor: maven_docker
             executor: maven_vm
 
-        # jobs for branch #####################################################
         - approve_deploy_dev_branch:
-            name: 'approve-deploy-dev-branch'
             type: approval
             filters:
               branches:
@@ -166,63 +136,39 @@ usage:
                   - 'master'
 
         - ric-orb/build_push_image:
-            name: 'build-push-image-branch'
+            name: 'build-push-image'
             context: dev
             path: 'app2'
-            <<: [ *cfg-docker-version, *cfg-isopod-version ]
+            <<: *cfg-isopod-version
             docker_layer_caching: true
             requires:
-              - maven-build
-              - approve-deploy-dev-branch
+              - maven-build-test
+              # note semantic of 'requires': on master this is ignored
+              - approve_deploy_dev_branch
 
         - compliance/sre_compliance_checks:
-            name: 'sre-compliance-checks-branch'
             context: dev
             requires:
-              - build-push-image-branch
+              - build-push-image
 
         - ric-orb/deploy_job:
-            name: 'deploy-dev-branch'
+            name: 'deploy-dev'
             context: dev
             path: 'app2'
             <<: *cfg-isopod-version
             env: 'dev'
             requires:
-              - build-push-image-branch
+              - build-push-image
 
-        # jobs for master #####################################################
-        - ric-orb/build_push_image:
-            name: 'build-push-image-master'
-            context: dev
+        - ric-orb/deploy_job:
+            name: 'deploy-prod'
+            context: prod
             path: 'app2'
-            <<: [ *cfg-docker-version, *cfg-isopod-version ]
-            docker_layer_caching: true
+            <<: *cfg-isopod-version
+            env: 'prod'
             filters:
               branches:
                 only:
                   - 'master'
             requires:
-              - maven-build
-
-        - compliance/sre_compliance_checks:
-            name: 'sre-compliance-checks-master'
-            context: dev
-            requires:
-              - build-push-image-master
-
-        - ric-orb/deploy_job:
-            name: 'deploy-dev-master'
-            context: dev
-            path: 'app2'
-            <<: *cfg-isopod-version
-            env: 'dev'
-            requires:
-              - build-push-image-master
-        - ric-orb/deploy_job:
-            name: 'deploy-prod-branch'
-            context: prod
-            path: 'app2'
-            <<: *cfg-isopod-version
-            env: 'prod'
-            requires:
-              - deploy-dev-master
+              - deploy-dev
