--- a/src/examples/java_singleapprepo.yml
+++ b/src/examples/java_singleapprepo.yml
@@ -16,8 +16,6 @@ usage:
     compliance: ricardo/compliance-orb@2
     ric-orb: ricardo/ric-orb@1.7.1
 
-  cfg-docker-version: &cfg-docker-version
-    docker_version: '19.03.13'
   cfg-isopod-version: &cfg-isopod-version
     isopod_version: '0.29.1'
   cfg-cache-key-prefix: &cfg-cache-key-prefix
@@ -29,15 +27,13 @@ usage:
     java_single_app_repo:
       jobs:
         - ric-orb/maven_build_test:
-            name: 'maven-build'
+            name: 'maven-build-test'
             context: dev
             <<: *cfg-cache-key-prefix
             executor: maven_docker
 #            executor: maven_vm
 
-        # jobs for branch #####################################################
         - approve_deploy_dev_branch:
-            name: 'approve-deploy-dev-branch'
             type: approval
             filters:
               branches:
@@ -45,58 +41,36 @@ usage:
                   - 'master'
 
         - ric-orb/build_push_image:
-            name: 'build-push-image-branch'
+            name: 'build-push-image'
             context: dev
-            <<: [ *cfg-docker-version, *cfg-isopod-version ]
+            <<: *cfg-isopod-version
             docker_layer_caching: true
             requires:
-              - maven-build
-              - approve-deploy-dev-branch
+              - maven-build-test
+              # note semantic of 'requires': on master this is ignored
+              - approve_deploy_dev_branch
 
         - compliance/sre_compliance_checks:
-            name: 'sre-compliance-checks-branch'
             context: dev
             requires:
-              - build-push-image-branch
+              - build-push-image
 
         - ric-orb/deploy_job:
-            name: 'deploy-dev-branch'
+            name: 'deploy-dev'
             context: dev
             <<: *cfg-isopod-version
             env: 'dev'
             requires:
-              - build-push-image-branch
+              - build-push-image
 
-        # jobs for master #####################################################
-        - ric-orb/build_push_image:
-            name: 'build-push-image-master'
-            context: dev
-            <<: [ *cfg-docker-version, *cfg-isopod-version ]
-            docker_layer_caching: true
+        - ric-orb/deploy_job:
+            name: 'deploy-prod'
+            context: prod
+            <<: *cfg-isopod-version
+            env: 'prod'
             filters:
               branches:
                 only:
                   - 'master'
             requires:
-              - maven-build
-
-        - compliance/sre_compliance_checks:
-            name: 'sre-compliance-checks-master'
-            context: dev
-            requires:
-              - build-push-image-master
-
-        - ric-orb/deploy_job:
-            name: 'deploy-dev-master'
-            context: dev
-            <<: *cfg-isopod-version
-            env: 'dev'
-            requires:
-              - build-push-image-master
-        - ric-orb/deploy_job:
-            name: 'deploy-prod-branch'
-            context: prod
-            <<: *cfg-isopod-version
-            env: 'prod'
-            requires:
-              - deploy-dev-master
+              - deploy-dev
