--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -22,9 +22,11 @@ usage:
     modified-common:
       type: boolean
       default: false
+    # TODO: replace with your actual app name
     modified-app1:
       type: boolean
       default: false
+    # TODO: replace with your actual app name
     modified-app2:
       type: boolean
       default: false
@@ -32,6 +34,7 @@ usage:
   cfg-isopod-version: &cfg-isopod-version
     isopod_version: '0.29.1'
   cfg-cache-key-prefix: &cfg-cache-key-prefix
+    # TODO: replace with your actual repo name
     cache_key_prefix: my-repo
 
   workflows:
@@ -50,6 +53,7 @@ usage:
     ###########################################################################
     # workflow for maven module 'app1'
     ###########################################################################
+    # TODO: replace with your actual app name
     app1:
       when:
         or:
@@ -113,6 +117,7 @@ usage:
     ###########################################################################
     # maven module: 'app2'
     ###########################################################################
+    # TODO: replace with your actual app name
     app2:
       when:
         or:
