--- a/src/examples/java_singleapprepo.yml
+++ b/src/examples/java_singleapprepo.yml
@@ -19,11 +19,13 @@ usage:
   cfg-isopod-version: &cfg-isopod-version
     isopod_version: '0.29.1'
   cfg-cache-key-prefix: &cfg-cache-key-prefix
+    # TODO: replace with your actual repo name
     cache_key_prefix: my-repo
 
   workflows:
     version: 2
 
+    # TODO: replace with your actual app name
     java_single_app_repo:
       jobs:
         - ric-orb/maven_build_test:
