create .npmrc in home directory instead of working directory

--- a/src/commands/npm_auth.yml
+++ b/src/commands/npm_auth.yml
@@ -9,4 +9,4 @@ parameters:
 steps:
   - run:
       name: Set NPM credentials
-      command: echo -e ${<< parameters.npm_credentials >>} | base64 -d > .npmrc
+      command: echo -e ${<< parameters.npm_credentials >>} | base64 -d > ${HOME}/.npmrc
