--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -16,24 +16,25 @@ usage:
 
   orbs:
     compliance: ricardo/compliance-orb@2
-    ric-orb: ricardo/ric-orb@1.7.1
+    ric-orb: ricardo/ric-orb@2.0
 
   parameters:
     modified-common:
       type: boolean
       default: false
+    # FIXME: replace with your actual app name
     modified-app1:
       type: boolean
       default: false
+    # FIXME: replace with your actual app name
     modified-app2:
       type: boolean
       default: false
 
-  cfg-docker-version: &cfg-docker-version
-    docker_version: '19.03.13'
   cfg-isopod-version: &cfg-isopod-version
     isopod_version: '0.29.1'
   cfg-cache-key-prefix: &cfg-cache-key-prefix
+    # FIXME: replace with your actual repo name
     cache_key_prefix: my-repo
 
   workflows:
@@ -52,6 +53,7 @@ usage:
     ###########################################################################
     # workflow for maven module 'app1'
     ###########################################################################
+    # FIXME: replace with your actual app name
     app1:
       when:
         or:
@@ -60,16 +62,15 @@ usage:
 
       jobs:
         - ric-orb/maven_build_test:
-            name: 'maven-build'
+            name: 'maven-build-test'
             context: dev
+            # FIXME: replace with your actual app path
             path: 'app1'
             <<: *cfg-cache-key-prefix
             executor: maven_docker
 #            executor: maven_vm
 
-        # jobs for branch #####################################################
         - approve_deploy_dev_branch:
-            name: 'approve-deploy-dev-branch'
             type: approval
             filters:
               branches:
@@ -77,70 +78,50 @@ usage:
                   - 'master'
 
         - ric-orb/build_push_image:
-            name: 'build-push-image-branch'
+            name: 'build-push-image'
             context: dev
+            # FIXME: replace with your actual app path
             path: 'app1'
-            <<: [ *cfg-docker-version, *cfg-isopod-version ]
+            <<: *cfg-isopod-version
             docker_layer_caching: true
             requires:
-              - maven-build
-              - approve-deploy-dev-branch
+              - maven-build-test
+              # note semantic of 'requires': on master this is ignored
+              - approve_deploy_dev_branch
 
         - compliance/sre_compliance_checks:
-            name: 'sre-compliance-checks-branch'
             context: dev
             requires:
-              - build-push-image-branch
+              - build-push-image
 
         - ric-orb/deploy_job:
-            name: 'deploy-dev-branch'
+            name: 'deploy-dev'
             context: dev
+            # FIXME: replace with your actual app path
             path: 'app1'
             <<: *cfg-isopod-version
             env: 'dev'
             requires:
-              - build-push-image-branch
+              - build-push-image
 
-        # jobs for master #####################################################
-        - ric-orb/build_push_image:
-            name: 'build-push-image-master'
-            context: dev
+        - ric-orb/deploy_job:
+            name: 'deploy-prod'
+            context: prod
+            # FIXME: replace with your actual app path
             path: 'app1'
-            <<: [ *cfg-docker-version, *cfg-isopod-version ]
-            docker_layer_caching: true
+            <<: *cfg-isopod-version
+            env: 'prod'
             filters:
               branches:
                 only:
                   - 'master'
             requires:
-              - maven-build
-
-        - compliance/sre_compliance_checks:
-            name: 'sre-compliance-checks-master'
-            context: dev
-            requires:
-              - build-push-image-master
-
-        - ric-orb/deploy_job:
-            name: 'deploy-dev-master'
-            context: dev
-            path: 'app1'
-            <<: *cfg-isopod-version
-            env: 'dev'
-            requires:
-              - build-push-image-master
-        - ric-orb/deploy_job:
-            name: 'deploy-prod-branch'
-            context: prod
-            path: 'app1'
-            <<: *cfg-isopod-version
-            env: 'prod'
-            requires:
-              - deploy-dev-master
+              - deploy-dev
 
     ###########################################################################
     # maven module: 'app2'
     ###########################################################################
+    # FIXME: replace with your actual app name
     app2:
       when:
         or:
@@ -149,16 +130,15 @@ usage:
 
       jobs:
         - ric-orb/maven_build_test:
-            name: 'maven-build'
+            name: 'maven-build-test'
             context: dev
+            # FIXME: replace with your actual app path
             path: 'app2'
             <<: *cfg-cache-key-prefix
 #            executor: maven_docker
             executor: maven_vm
 
-        # jobs for branch #####################################################
         - approve_deploy_dev_branch:
-            name: 'approve-deploy-dev-branch'
             type: approval
             filters:
               branches:
@@ -166,63 +146,42 @@ usage:
                   - 'master'
 
         - ric-orb/build_push_image:
-            name: 'build-push-image-branch'
+            name: 'build-push-image'
             context: dev
+            # FIXME: replace with your actual app path
             path: 'app2'
-            <<: [ *cfg-docker-version, *cfg-isopod-version ]
+            <<: *cfg-isopod-version
             docker_layer_caching: true
             requires:
-              - maven-build
-              - approve-deploy-dev-branch
+              - maven-build-test
+              # note semantic of 'requires': on master this is ignored
+              - approve_deploy_dev_branch
 
         - compliance/sre_compliance_checks:
-            name: 'sre-compliance-checks-branch'
             context: dev
             requires:
-              - build-push-image-branch
+              - build-push-image
 
         - ric-orb/deploy_job:
-            name: 'deploy-dev-branch'
+            name: 'deploy-dev'
             context: dev
+            # FIXME: replace with your actual app path
             path: 'app2'
             <<: *cfg-isopod-version
             env: 'dev'
             requires:
-              - build-push-image-branch
+              - build-push-image
 
-        # jobs for master #####################################################
-        - ric-orb/build_push_image:
-            name: 'build-push-image-master'
-            context: dev
+        - ric-orb/deploy_job:
+            name: 'deploy-prod'
+            context: prod
+            # FIXME: replace with your actual app path
             path: 'app2'
-            <<: [ *cfg-docker-version, *cfg-isopod-version ]
-            docker_layer_caching: true
+            <<: *cfg-isopod-version
+            env: 'prod'
             filters:
               branches:
                 only:
                   - 'master'
             requires:
-              - maven-build
-
-        - compliance/sre_compliance_checks:
-            name: 'sre-compliance-checks-master'
-            context: dev
-            requires:
-              - build-push-image-master
-
-        - ric-orb/deploy_job:
-            name: 'deploy-dev-master'
-            context: dev
-            path: 'app2'
-            <<: *cfg-isopod-version
-            env: 'dev'
-            requires:
-              - build-push-image-master
-        - ric-orb/deploy_job:
-            name: 'deploy-prod-branch'
-            context: prod
-            path: 'app2'
-            <<: *cfg-isopod-version
-            env: 'prod'
-            requires:
-              - deploy-dev-master
+              - deploy-dev
