--- a/src/jobs/build_push_image.yml
+++ b/src/jobs/build_push_image.yml
@@ -44,7 +44,7 @@ parameters:
     default: 'NPM_RC'
   docker_layer_caching:
     type: boolean
-    default: false
+    default: true
   docker_version:
     type: string
     default: '19.03.13'
