--- a/src/examples/java_singleapprepo.yml
+++ b/src/examples/java_singleapprepo.yml
@@ -19,16 +19,17 @@ usage:
   cfg-isopod-version: &cfg-isopod-version
     isopod_version: '0.29.1'
   cfg-cache-key-prefix: &cfg-cache-key-prefix
-    # FIXME: replace with your actual repo name
+    # FIXME: replace value with your actual repo name
     cache_key_prefix: my-repo
 
   workflows:
     version: 2
 
-    # FIXME: replace with your actual app name
+    # FIXME: replace name with your actual app name
     java_single_app_repo:
       jobs:
         - ric-orb/maven_build_test:
+            # github status check typically checks this job
             name: 'maven-build-test'
             context: dev
             <<: *cfg-cache-key-prefix
