--- a/src/examples/java_monorepo_setup.yml
+++ b/src/examples/java_monorepo_setup.yml
@@ -29,7 +29,7 @@ usage:
     setup:
       jobs:
         - path-filtering/filter:
-            # FIXME: replace master branch name with your actual master/main branch name
+            # FIXME: replace value with your actual main/master branch name
             base-revision: master
             # 3-column, whitespace-delimited mapping. One mapping per line:
             # <regex path-to-test> <parameter-to-set> <value-of-pipeline-parameter>
