--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -101,6 +101,7 @@ usage:
             filters:
               branches:
                 ignore:
+                  # FIXME: replace value with your actual main/master branch name
                   - 'master'
 
         - ric-orb/build_push_image:
@@ -140,6 +141,7 @@ usage:
             filters:
               branches:
                 only:
+                  # FIXME: replace value with your actual main/master branch name
                   - 'master'
             requires:
               - deploy-dev
@@ -171,6 +173,7 @@ usage:
             filters:
               branches:
                 ignore:
+                  # FIXME: replace value with your actual main/master branch name
                   - 'master'
 
         - ric-orb/build_push_image:
@@ -210,6 +213,7 @@ usage:
             filters:
               branches:
                 only:
+                  # FIXME: replace value with your actual main/master branch name
                   - 'master'
             requires:
               - deploy-dev
