login to jfrog so that builds testing with test-containers have access to required docker images

--- a/src/jobs/maven_build_test.yml
+++ b/src/jobs/maven_build_test.yml
@@ -25,6 +25,10 @@ steps:
   - maven_auth
   - maven_restore_artifacts:
       prefix: << parameters.cache_key_prefix >>
+  - login_docker_registry:
+      url: ${DOCKER_JFROG_REGISTRY_URL}
+      username: ${DOCKER_JFROG_USERNAME}
+      password: ${DOCKER_JFROG_PASSWORD}
   - maven_build_test:
       path: << parameters.path >>
   - maven_cache_artifacts:
