--- a/src/jobs/go_build_test.yml
+++ b/src/jobs/go_build_test.yml
@@ -4,7 +4,7 @@ description: >
 parameters:
   executor:
     type: executor
-    deafault:
+    default:
       name: go/default
       tag: '1.17'
   work_dir:
