--- a/src/jobs/build_push_image.yml
+++ b/src/jobs/build_push_image.yml
@@ -56,10 +56,6 @@ parameters:
     description: 'Steps that will run after build'
     type: steps
     default: [ ]
-  work_dir:
-    description: 'Working directory for build_push step'
-    type: string
-    default: .
 
 steps:
   - checkout
@@ -89,6 +85,5 @@ steps:
       at: .
   - steps: << parameters.prebuild_steps >>
   - build_push:
-      config: << parameters.path >>/isopod.yml
-      work_dir: << parameters.work_dir>>
+      work_dir: << parameters.path >>
   - steps: << parameters.postbuild_steps >>
